# ESFEX

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  SECURITY.md  environment.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  installer-windows.yml
docs/: MODEL_COMPARISON.md  index.md
docs/api/: bridge-adapters.md  bridge-julia-setup.md  config-loader.md  config-schema.md  index.md  io-demand.md  io-exporter.md  julia-api.md  models-ev-adoption.md  models-ev-analysis.md  models-ev.md  models-financial-analysis.md  models-solar-rooftop.md  runner.md  sensitivity.md  utils.md
docs/assets/css/: extra.css
docs/contributing/: development-setup.md  julia-development.md  plugin-development.md  testing.md
docs/formulation/: ac-power-flow.md  capacity-expansion.md  dc-power-flow.md  electrolyzer.md  ev-model.md  frequency-stability.md  operational-dispatch.md  overview.md  primary-energy.md  reservoir-hydro.md  risk-resilience.md  rooftop-solar.md  stochastic-programming.md
docs/getting-started/: architecture.md  concepts.md  installation.md  quickstart.md
docs/gui/: element-forms.md  global-settings.md  inter-system-links.md  map-editor.md  overview.md  plugins.md  scripting.md  sld-dynamic-analysis.md  system-management.md
docs/reference/: bibliography.md  changelog.md  config-reference.md  constraint-catalog.md  glossary.md  hdf5-output-schema.md
docs/tutorials/: custom-scenarios.md  ev-integration.md  gui-workflow.md  mga.md  multi-node.md  multi-system.md  primary-energy.md  sensitivity-analysis.md  single-system.md  stochastic.md
docs/user-guide/: availability-profiles.md  cli.md  configuration.md  demand-data.md  development-zones.md  master-problem.md  results-export.md  solver-guide.md
docs/workflows/: demand-distribution.md  ev-v2g.md  financial-analysis.md  grid-auto-mapping.md  index.md  otec.md  rooftop-solar.md  solar-pv.md  wind.md
examples/plugins/custom_constraint_example/: __init__.py  overlay.jl  plugin.json
installer/: README.md  construct.yaml  post_install.bat
recipe/: meta.yaml
src/esfex/: __init__.py  __main__.py  cli.py  logging_config.py  paths.py  runner.py  zones.py
src/esfex/analysis/: __init__.py  ac_contingency.py  ac_types.py  contingency.py  frequency.py  n1_assessment.py  native_ac_bridge.py  pandapower_bridge.py  snapshot_builder.py
src/esfex/bridge/: __init__.py  adapters.py  converters.py  julia_setup.py  topology_audit.py
src/esfex/config/: __init__.py  loader.py  schema.py  solver.py
src/esfex/io/: __init__.py  demand.py  exporter.py
src/esfex/julia/: Manifest.toml  Project.toml  build_sysimage.jl  precompile_workload.jl
src/esfex/julia/src/: ESFEX.jl  acopf_benchmark.jl  benders.jl  dcopf_benchmark.jl  electrolyzer.jl  master_problem.jl  mga.jl  power_system.jl  primary_energy.jl  transmission_ac.jl  transmission_acopf.jl  transmission_dc.jl  types.jl  user_constraints.jl
src/esfex/julia/test/: runtests.jl
src/esfex/models/: __init__.py  adoption_models.py  climate_profiles.py  country_metadata.py  demand_dataset.py  demand_ml.py  demand_projection.py  demand_real_data.py  demand_tft.py  demand_training.py  demand_zonal_fetchers.py  download_cmip6.py  download_cmip6_subdaily.py  ecvi_gridded.py  ev.py  ev_adoption.py  ev_analysis.py  financial_analysis.py  hazard_assessment.py  otec_models.py  pixel_features.py  solar_pv_models.py  solar_rooftop.py  tft_inference.py  tsam.py  wind_models.py  zone_centroids.py
src/esfex/plugins/: __init__.py  manager.py  protocol.py
src/esfex/plugins/availability_generator/: __init__.py  cli_commands.py  generator.py  grid_builder_hook.py  gui_dialog.py  otec_cf.py  plugin.json  solar_cf.py  synthetic_cf.py  wind_cf.py
src/esfex/sensitivity/: __init__.py  engine.py  lp_parser.py  worker.py
src/esfex/topology/: __init__.py  network_reducer.py  reduction_map.py  result_expander.py  transformations.py
src/esfex/utils/: __init__.py  helpers.py  paths.py  temporal.py
src/esfex/visualization/: __init__.py  app.py  i18n.py  main_window.py  map_widget.py  modern_widgets.py  preferences.py  pty_runner.py  run_output_view.py  scripting_api.py  sld_widget.py  splash.py  theme.py
src/esfex/visualization/bridge/: channel.py  js_bridge.py  sld_bridge.py
src/esfex/visualization/data/: auto_complete.py  connectivity_rules.py  default_colors.py  geo_asset_parser.py  geojson_importer.py  gui_model.py  project_bundle.py  serializer.py  undo.py  validation.py
src/esfex/visualization/panels/: _dialogs.py  acdc_converter_form.py  analysis_panel.py  auto_complete_dialog.py  battery_form.py  bus_form.py  collapse_button.py  dashboard_loader.py  dashboard_view.py  demand_visualizer.py  doc_viewer.py  electrolyzer_form.py  element_tree.py  ev_form.py  freq_converter_form.py  fuel_entry_form.py  fuel_form.py  fuel_route_form.py  fuel_source_form.py  (+32 more)
tests/: benchmark_operational.py  conftest.py  ieee_benchmark_io.py  ieee_validation_plots.py  patch_failed_acopf.py  run_ieee_validation.py  test_adapters_helpers.py  test_auto_complete.py  test_availability_generator.py  test_canon3_regression.py  test_cli.py  test_connectivity_rules.py  test_contingency.py  test_converters.py  test_custom_constraints.py  test_demand.py  test_demand_analysis.py  test_demand_projection_cov.py  test_demand_visualizer.py  test_electrolyzer_primary_energy.py  test_ev.py  test_ev_adoption.py  test_ev_analysis.py  test_ev_cov.py  test_exporter.py  test_fetch_finalize_worker.py  test_financial_analysis.py  test_financial_analysis_cov.py  test_frequency.py  test_geo_asset_parser.py  test_geo_asset_parser_extra.py  test_geo_domain.py  test_geojson_importer_extra.py  test_graph_builder_cov.py  test_grid_demand_forecast.py  test_grid_mapping_builder_extra.py  test_grid_mapping_e2e.py  test_grid_mapping_inference_extra.py  test_grow_dialog_area.py  test_gui_model.py  (+39 more)
tests/fixtures/: canon3_demand.csv  canon3_regression.yaml  ieee_bus_data.py  ieee_reference_solvers.py  small_system.yaml
(+154 files in other folders)
