[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esfex"
version = "0.1.9"
description = "ESFEX: Energy System FlEXibility — Power System Optimization"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Manuel Soto Calvo", email = "manuel.sotocalvo@gmail.com"},
    {name = "Han Soo Lee"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["power systems", "optimization", "renewable energy", "flexibility", "JuMP"]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "h5py>=3.8.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "juliacall>=0.9.14",
    "networkx>=3.0",
    "openpyxl>=3.1.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "scipy>=1.10.0",
    "windrex>=0.1.0",
    "solarex>=0.1.0",
    "rooftex>=0.1.0",
    "evrex>=0.1.0",
    "PySide6>=6.5.0",
    "superqt>=0.6.0",
    "markdown>=3.4",
    # Real PTY backend for the embedded xterm.js Run Output view in
    # the GUI. POSIX-only; the RunOutputView surfaces a friendly
    # message and falls back to the legacy QProcess console if the
    # import fails (so Windows users keep working).
    "ptyprocess>=0.7.0; sys_platform != 'win32'",
    # ── Promoted from former optional extras to core ──────────────────
    # These back GUI workflows and analyses that previously raised
    # ModuleNotFoundError when the matching extra wasn't installed.
    # Visualization / charts (former [viz]):
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "kaleido>=0.2.1",
    # Sensitivity analysis (former [sensitivity]; matplotlib above):
    "SALib>=1.4.7",
    # Benchmarking against other tools (former [benchmark]):
    "pypsa>=0.28.0",
    "pandapower>=2.14.0",
    "pypower>=5.1.0",
    "matpower>=7.1.0",
    # GIS / resource-assessment workflows (former [workflows]):
    "pvlib>=0.11.0",
    "geopandas>=0.14.0",
    "duckdb>=1.0.0",
    "shapely>=2.0.0",
    "requests>=2.28.0",
    "overpy>=0.7",
    "otex>=0.1.0",
    "scikit-learn>=1.3.0",
    "atlite>=0.2.11",
    "rasterio>=1.3.0",
    # Demand estimation — classical ML (former [ml]):
    "xgboost>=2.0.0",
    # Demand estimation — deep learning (former [dl]; heavy: torch):
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "pytorch-forecasting>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
esfex = "esfex.cli:_entrypoint"

# GUI launcher: pip builds a console-less ``esfex-studio.exe`` (pythonw-based)
# on Windows. The installer's Start-Menu and Desktop shortcuts target it so a
# double-click opens the Studio with no terminal window. See post_install.bat.
[project.gui-scripts]
esfex-studio = "esfex.cli:_studio_entrypoint"

[project.urls]
Homepage = "https://github.com/Net-Zero-Horizon/ESFEX"
Documentation = "https://github.com/Net-Zero-Horizon/ESFEX#readme"
Repository = "https://github.com/Net-Zero-Horizon/ESFEX"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
esfex = [
    "julia/**/*",
    "visualization/resources/**/*",
    "visualization/translations/**/*.json",
    "icons/**/*",
    "plugins/**/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "julia: marks tests as requiring Julia (skip if Julia unavailable)",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["esfex"]
# Line coverage targets the unit-testable surface. Three classes of code are
# excluded because they cannot be meaningfully exercised by unit tests in CI;
# they are validated separately (interactively or via integration/Julia tests):
#   1. Qt/presentation — widgets, panels, charts, wizards, dialogs, main window.
#   2. Julia-bound integration glue — the optimization orchestrator and the
#      juliacall adapters/AC bridge (covered by the `julia`-marked tests).
#   3. Optional resource-assessment / demand pipelines that require heavy extras
#      (pvlib, atlite, geopandas, xgboost) and external data or network access.
omit = [
    # 1. Qt / presentation
    "*/esfex/visualization/app.py",
    "*/esfex/visualization/main_window.py",
    "*/esfex/visualization/map_widget.py",
    "*/esfex/visualization/sld_widget.py",
    "*/esfex/visualization/run_output_view.py",
    "*/esfex/visualization/python_console.py",
    "*/esfex/visualization/scripting_api.py",
    "*/esfex/visualization/panels/*",
    "*/esfex/visualization/workflows/*_steps.py",
    "*/esfex/visualization/workflows/*_charts.py",
    "*/esfex/visualization/workflows/*_wizard.py",
    "*/esfex/visualization/workflows/risk_panels.py",
    "*/esfex/visualization/workflows/otec_studio/*_panel.py",
    "*/esfex/visualization/workflows/otec_studio/window.py",
    "*/esfex/visualization/workflows/otec_studio/workers.py",
    "*/esfex/visualization/modern_widgets.py",
    "*/esfex/visualization/**/gui_dialog.py",
    "*/esfex/visualization/**/*_dialog.py",
    "*/esfex/plugins/**/gui_dialog.py",
    "*/esfex/visualization/pty_runner.py",
    "*/esfex/visualization/splash.py",
    "*/esfex/visualization/workflows/grid_mapping_clustering.py",
    # 2. Julia-bound integration glue (exercised by `julia`-marked tests)
    "*/esfex/runner.py",
    "*/esfex/bridge/adapters.py",
    "*/esfex/bridge/converters.py",
    "*/esfex/analysis/native_ac_bridge.py",
    # 3. Optional resource-assessment / demand pipelines (heavy extras + data)
    "*/esfex/visualization/workflows/*_analysis.py",
    "*/esfex/visualization/workflows/*_fetchers.py",
    "*/esfex/analysis/pandapower_bridge.py",
    "*/esfex/analysis/ac_contingency.py",
    "*/esfex/models/demand_real_data.py",
    "*/esfex/models/demand_training.py",
    "*/esfex/models/demand_zonal_fetchers.py",
    "*/esfex/models/ecvi_gridded.py",
    "*/esfex/models/demand_dataset.py",
    "*/esfex/models/demand_ml.py",
    "*/esfex/models/demand_tft.py",
    "*/esfex/models/tft_inference.py",
    "*/esfex/models/tsam.py",
    "*/esfex/models/climate_profiles.py",
    "*/esfex/models/pixel_features.py",
    "*/esfex/models/zone_centroids.py",
    "*/esfex/models/download_cmip6.py",
    "*/esfex/models/download_cmip6_subdaily.py",
    "*/esfex/plugins/availability_generator/wind_cf.py",
    "*/esfex/plugins/availability_generator/solar_cf.py",
    "*/esfex/plugins/availability_generator/otec_cf.py",
    "*/esfex/plugins/availability_generator/grid_builder_hook.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
